# chatbot-with-llama-index

./: .bump  .pre-commit-config.yaml  CONTRIBUTING.md  PRACTICES.md  README.md  bandit.yaml  cookiecutter.json  noxfile.py  pyproject.toml  setup.cfg
notebooks/: 00_rag_from_scratch.ipynb  basic.ipynb  requirements.txt
