[tool.poetry]
name = "chatbot_with_llama_index"
version = "0.1.0"
description = "A short description of the project."
authors = ["Santiagoras <santiagoras101@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-decouple = "^3.3"
sqlalchemy = "^1.3.19"
argparse = "^1.4.0"
importlib-metadata = {version = "^1.0", python = "^3.8"}
pytest = {version = "^6.1.0", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
pytest-xdist = {version = "^2.1.0", optional = true}
muttlib = {git = "https://gitlab.com/mutt_data/muttlib.git"}


[tool.poetry.dev-dependencies]
bump = "^1.1.1"
nox = "^2020.8.22"
pylint = "^2.6.0"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "19.10b0"
pre-commit = "^2.13.0"
bandit = "^1.7.0"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov", "pytest-xdist"]

[tool.black]
line-length = 88
skip-string-normalization = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

